# TextEditor

./: AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  C_PROJECT_STANDARD.md  README.md
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: infrastructure.md
.github/workflows/: ci.yml  pr-template.yml  static-analysis.yml
cmake/: CompilerOptions.cmake  Packaging.cmake  Sources.cmake  Tests.cmake  TextEditorConfig.cmake.in  texteditor_version.h.in
doc/: README.md
doc/adr/: 0001-c11-cmake-toolchain-policy.md
doc/guides/: ai-agent.md  cmake.md  environment.md  release.md  template.md  testing.md
doc/prompts/: learning-with-ai.md
include/app/: application.h
include/base/: export.h  log.h  types.h
include/example/: example.h
include/parser/: command_parser.h
include/startup/: startup_cmd.h
include/texteditor/: application.h  compiler.h  example.h
installer/windows/: License.rtf  TextEditor.wxs
scripts/: build-msi.ps1  check.ps1  rename-project.ps1  rename-project.sh
src/: main.c
src/app/: application.c
src/example/: example.c
src/parser/: command_parser.c
src/startup/: startup_cmd.c
src/texteditor/: application.c  example.c
tests/: test_example.c
tests/package_smoke/: CMakeLists.txt  cxx_header_smoke.cpp  main.c
tests/subproject_smoke/: CMakeLists.txt  main.c
tests/support/: test_assert.h
